--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </section>
     <section class="section-meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -123,7 +123,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img
@@ -158,18 +158,167 @@
         </li>
       </ul>
     </section>
+    <section class="section-steps">
+      <div class="row">
+        <h2>How it works - Simple as 1, 2, 3</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2 steps-box ">
+          <img
+            src="resourses/img/app-iPhone.png"
+            alt="Omnifood app on iphone"
+            class="app-screen"
+          />
+        </div>
+        <div class="col span-1-of-2 steps-box">
+          <div class="works-step">
+            <div>1</div>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today.
+            </p>
+          </div>
+          <div class="works-step">
+            <div>2</div>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us!
+            </p>
+          </div>
+          <div class="works-step">
+            <div>3</div>
+            <p>
+              Enjoy your meal after less than 20 minutes. See you the next time!
+            </p>
+          </div>
+          <a href="#"
+            ><img
+              src="resourses/img/download-app.svg"
+              alt=""
+              class="btn-app"/></a
+          ><a href="#"
+            ><img
+              src="resourses/img/download-app-android.png"
+              alt=""
+              class="btn-app"
+          /></a>
+        </div>
+      </div>
+    </section>
+    <section class="section-cities">
+      <div class="row">
+        <h2>We're currently in these cities</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-4 box">
+          <img src="resourses/img/lisbon-3.jpg" alt="" class="city-img" />
+          <h3>Lisbon</h3>
+          <div class="city-feature">
+            <ion-icon name="person"></ion-icon>1600+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star"></ion-icon>60+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter"></ion-icon>
+            <a href="#">@omnifood_lx</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="resourses/img/san-francisco.jpg" alt="" class="city-img" />
+          <h3>San Francisco</h3>
+          <div class="city-feature">
+            <ion-icon name="person"></ion-icon>3700+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star"></ion-icon>160+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter"></ion-icon>
+            <a href="#">@omnifood_sf</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="resourses/img/berlin.jpg" alt="" class="city-img" />
+          <h3>Berlin</h3>
+          <div class="city-feature">
+            <ion-icon name="person"></ion-icon>2300+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star"></ion-icon>110+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter"></ion-icon>
+            <a href="#">@omnifood_berlin</a>
+          </div>
+        </div>
+        <div class="col span-1-of-4 box">
+          <img src="resourses/img/london.jpg" alt="" class="city-img" />
+          <h3>London</h3>
+          <div class="city-feature">
+            <ion-icon name="person"></ion-icon>1200+ happy eaters
+          </div>
+          <div class="city-feature">
+            <ion-icon name="star"></ion-icon>50+ top chefs
+          </div>
+          <div class="city-feature">
+            <ion-icon name="logo-twitter"></ion-icon>
+            <a href="#">@omnifood_london</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-testimonials">
+      <div class="row">
+        <h2>Our customers can't live without us</h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-3">
+          <blockquote>
+            Omnifood is just awesome! I just launched a startup which leaves me
+            with no time for cooking, so Omnifood is a life-saver. Now that I
+            got used to it, I couldn't live without my daily meals!
+            <cite>
+              <img src="resourses/img/customer-1.jpg" alt="" /> Alberto
+              Duncan</cite
+            >
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            Inexpensive, healthy and great-tasting meals, delivered right to my
+            home. We have lots of food delivery here in Lisbon, but no one comes
+            even close to Omifood. Me and my family are so in love!
+            <cite>
+              <img src="resourses/img/customer-2.jpg" alt="" /> Joana
+              Silva</cite
+            >
+          </blockquote>
+        </div>
+        <div class="col span-1-of-3">
+          <blockquote>
+            I was looking for a quick and easy food delivery service in San
+            Franciso. I tried a lot of them and ended up with Omnifood. Best
+            food delivery service in the Bay Area. Keep up the great work!
+            <cite>
+              <img src="resourses/img/customer-3.jpg" alt="" /> Milton
+              Chapman</cite
+            >
+          </blockquote>
+        </div>
+      </div>
+    </section>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </body>
 </html>
 
-<!-- Section 2: Favorite meals
-Title: None
+<!-- Customer testimonials
+Title: 
 
-1.	
-2.	 
-3.	  
-4.	
-5.	
-6.	
-7.	 
-8.	 -->
+
+
+
+()
+
+
+() -->
