--- a/index.html
+++ b/index.html
@@ -404,6 +404,84 @@
         </div>
       </div>
     </section>
+    <section class="section-form">
+      <div class="row"><h2>We're happy to hear from you</h2></div>
+      <div class="row">
+        <form action="" class="contact-form">
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="name">Name</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Your Name Here"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="">E-mail</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Your E-mail Here"
+                required
+              />
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="">How did you find us?</label>
+            </div>
+            <div class="col span-2-of-3">
+              <select name="find-us" id="find-us">
+                <option value="friends" selected>Friends</option>
+                <option value="search">Google</option>
+                <option value="ad">Advertisement</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="">Newsletter</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input type="checkbox" name="news" id="news" checked />Yes Please
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="">Drop us a line</label>
+            </div>
+            <div class="col span-2-of-3">
+              <textarea
+                name="message"
+                placeholder="Your message here"
+                id=""
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col span-1-of-3">
+              <label for="">&nbsp;</label>
+            </div>
+            <div class="col span-2-of-3">
+              <input type="submit" name="submit" id="submit" value="Send!" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </body>
 </html>
