--- a/index.html
+++ b/index.html
@@ -482,6 +482,37 @@
         </form>
       </div>
     </section>
+    <footer>
+      <div class="row">
+        <div class="col span-1-of-2">
+          <ul class="footer-nav">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">iOS App</a></li>
+            <li><a href="#">Android App</a></li>
+          </ul>
+        </div>
+
+        <div class="col span-1-of-2">
+          <ul class="social-links">
+            <li class="social-icons">
+              <a href="#" class="github"
+                ><ion-icon name="logo-github" ></ion-icon
+              ></a>
+            </li>
+            <li class="social-icons">
+              <a href="#" class="linkedin"
+                ><ion-icon name="logo-linkedin" ></ion-icon
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <p>Copyright &copy; 2019 of omnifood.All rights resrved.</p>
+      </div>
+    </footer>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
   </body>
 </html>
