Added sticky navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="stylesheet" href="resourses/css/style.css" />
+    <link rel="stylesheet" href="resourses/css/queries.css" />
+
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
       rel="stylesheet"
@@ -26,6 +28,11 @@
             class="logo"
             alt="Omnifood Logo"
           />
+          <img
+            src="resourses/img/logo.png"
+            alt="Omnifood logo"
+            class="logo-black"
+          />
           <ul class="main-nav">
             <li><a href="#">Food delivery</a></li>
             <li><a href="#">How it works</a></li>
@@ -43,7 +50,7 @@
         <a class="btn btn-ghost" href="#">Show me more </a>
       </div>
     </header>
-    <section class="section-features">
+    <section class="section-features js--section-features">
       <div class="row">
         <h2>Get food fast &mdash; not fast food.</h2>
         <p class="long-copy">
@@ -498,12 +505,12 @@
           <ul class="social-links">
             <li class="social-icons">
               <a href="#" class="github"
-                ><ion-icon name="logo-github" ></ion-icon
+                ><ion-icon name="logo-github"></ion-icon
               ></a>
             </li>
             <li class="social-icons">
               <a href="#" class="linkedin"
-                ><ion-icon name="logo-linkedin" ></ion-icon
+                ><ion-icon name="logo-linkedin"></ion-icon
               ></a>
             </li>
           </ul>
@@ -513,24 +520,11 @@
         <p>Copyright &copy; 2019 of omnifood.All rights resrved.</p>
       </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="resourses/js/script.js"></script>
   </body>
 </html>
-
-<!-- Plan 1: 
-
-
-
-
-
-
-Plan 2: 
-
-
-
-
-Plan 3: 
-
-
-
- -->
