--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="vendors/css/animate.min.css" />
     <title>Omnifood</title>
   </head>
   <body>
@@ -34,10 +35,10 @@
             class="logo-black"
           />
           <ul class="main-nav">
-            <li><a href="#">Food delivery</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Our cities</a></li>
-            <li><a href="#">Sign up</a></li>
+            <li><a href="#features">Food delivery</a></li>
+            <li><a href="#works">How it works</a></li>
+            <li><a href="#cities">Our cities</a></li>
+            <li><a href="#plans">Sign up</a></li>
           </ul>
         </div>
       </nav>
@@ -46,11 +47,11 @@
           Goodbye junk food.<br />
           Hello super healthy meals.
         </h1>
-        <a class="btn btn-full" href="#">I’m hungry </a>
-        <a class="btn btn-ghost" href="#">Show me more </a>
+        <a class="btn btn-full js--scroll-to-plans" href="#">I’m hungry </a>
+        <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more </a>
       </div>
     </header>
-    <section class="section-features js--section-features">
+    <section class="section-features js--section-features" id="features">
       <div class="row">
         <h2>Get food fast &mdash; not fast food.</h2>
         <p class="long-copy">
@@ -59,7 +60,7 @@
           we’re really good at it, we promise!
         </p>
       </div>
-      <div class="row">
+      <div class="row js--wp-1">
         <div class="col span-1-of-4 box">
           <ion-icon name="infinite" class="icon-big"></ion-icon>
           <h3>Up to 365 days/year</h3>
@@ -165,16 +166,16 @@
         </li>
       </ul>
     </section>
-    <section class="section-steps">
+    <section class="section-steps" id="works">
       <div class="row">
         <h2>How it works - Simple as 1, 2, 3</h2>
       </div>
-      <div class="row">
-        <div class="col span-1-of-2 steps-box ">
+      <div class="row ">
+        <div class="col span-1-of-2 steps-box js--wp-2">
           <img
             src="resourses/img/app-iPhone.png"
             alt="Omnifood app on iphone"
-            class="app-screen"
+            class="app-screen "
           />
         </div>
         <div class="col span-1-of-2 steps-box">
@@ -212,11 +213,11 @@
         </div>
       </div>
     </section>
-    <section class="section-cities">
+    <section class="section-cities" id="cities">
       <div class="row">
         <h2>We're currently in these cities</h2>
       </div>
-      <div class="row">
+      <div class="row js--wp-3">
         <div class="col span-1-of-4 box">
           <img src="resourses/img/lisbon-3.jpg" alt="" class="city-img" />
           <h3>Lisbon</h3>
@@ -315,11 +316,11 @@
         </div>
       </div>
     </section>
-    <section class="section-plans">
+    <section class="section-plans js--section-plans" id="plans">
       <div class="row"><h2>Start eating healthy today</h2></div>
       <div class="row">
         <div class="col span-1-of-3">
-          <div class="plan-box">
+          <div class="plan-box js--wp-4">
             <div>
               <h3>Premium</h3>
               <p class="plan-price">399$ <span> / month</span></p>
