--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="vendors/css/grid.css" />
     <link rel="stylesheet" href="resourses/css/style.css" />
     <link rel="stylesheet" href="resourses/css/queries.css" />
+    <link
+      href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
     />
     <link
       href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css"
@@ -34,12 +44,16 @@
             alt="Omnifood logo"
             class="logo-black"
           />
-          <ul class="main-nav">
+          <ul class="main-nav js--main-nav">
             <li><a href="#features">Food delivery</a></li>
             <li><a href="#works">How it works</a></li>
             <li><a href="#cities">Our cities</a></li>
             <li><a href="#plans">Sign up</a></li>
           </ul>
+          <a class="mobile-nav-icon js--nav-icon">
+            <i class="fas fa-bars"></i>
+            <!-- <i class="fas fa-times"></i> -->
+          </a>
         </div>
       </nav>
       <div class="hero-text-box">
@@ -62,7 +76,7 @@
       </div>
       <div class="row js--wp-1">
         <div class="col span-1-of-4 box">
-          <ion-icon name="infinite" class="icon-big"></ion-icon>
+          <i class="fas fa-infinity icon-big"></i>
           <h3>Up to 365 days/year</h3>
           <p>
             Never cook again! We really mean that. Our subscription plans
@@ -71,7 +85,7 @@
           </p>
         </div>
         <div class="col span-1-of-4 box">
-          <ion-icon name="timer" class="icon-big"></ion-icon>
+          <i class="far fa-clock icon-big"></i>
           <h3>Ready in 20 minutes</h3>
           <p>
             You're only twenty minutes away from your delicious and super
@@ -80,7 +94,7 @@
           </p>
         </div>
         <div class="col span-1-of-4 box">
-          <ion-icon name="nutrition" class="icon-big"></ion-icon>
+          <i class="fas fa-leaf icon-big"></i>
           <h3>100% organic</h3>
           <p>
             All our vegetables are fresh, organic and local. Animals are raised
@@ -89,7 +103,7 @@
           </p>
         </div>
         <div class="col span-1-of-4 box">
-          <ion-icon name="happy" class="icon-big"></ion-icon>
+          <i class="far fa-smile-wink icon-big"></i>
           <h3>Order anything</h3>
           <p>
             We don't limit your creativity, which means you can order whatever
@@ -217,60 +231,61 @@
       <div class="row">
         <h2>We're currently in these cities</h2>
       </div>
-      <div class="row js--wp-3">
-        <div class="col span-1-of-4 box">
+      <div class="row ">
+        <div class="col span-1-of-4 box js--wp-3">
           <img src="resourses/img/lisbon-3.jpg" alt="" class="city-img" />
           <h3>Lisbon</h3>
           <div class="city-feature">
-            <ion-icon name="person"></ion-icon>1600+ happy eaters
+            <i class="fas fa-user icon-small"></i>
+            1600+ happy eaters
           </div>
           <div class="city-feature">
-            <ion-icon name="star"></ion-icon>60+ top chefs
+            <i class="fas fa-star icon-small"></i>60+ top chefs
           </div>
           <div class="city-feature">
-            <ion-icon name="logo-twitter"></ion-icon>
+            <i class="fab fa-twitter icon-small"></i>
             <a href="#">@omnifood_lx</a>
           </div>
         </div>
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box js--wp-3">
           <img src="resourses/img/san-francisco.jpg" alt="" class="city-img" />
           <h3>San Francisco</h3>
           <div class="city-feature">
-            <ion-icon name="person"></ion-icon>3700+ happy eaters
+            <i class="fas fa-user icon-small"></i>3700+ happy eaters
           </div>
           <div class="city-feature">
-            <ion-icon name="star"></ion-icon>160+ top chefs
+            <i class="fas fa-star icon-small"></i>160+ top chefs
           </div>
           <div class="city-feature">
-            <ion-icon name="logo-twitter"></ion-icon>
+            <i class="fab fa-twitter icon-small"></i>
             <a href="#">@omnifood_sf</a>
           </div>
         </div>
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box js--wp-3">
           <img src="resourses/img/berlin.jpg" alt="" class="city-img" />
           <h3>Berlin</h3>
           <div class="city-feature">
-            <ion-icon name="person"></ion-icon>2300+ happy eaters
+            <i class="fas fa-user icon-small"></i>2300+ happy eaters
           </div>
           <div class="city-feature">
-            <ion-icon name="star"></ion-icon>110+ top chefs
+            <i class="fas fa-star icon-small"></i>110+ top chefs
           </div>
           <div class="city-feature">
-            <ion-icon name="logo-twitter"></ion-icon>
+            <i class="fab fa-twitter icon-small"></i>
             <a href="#">@omnifood_berlin</a>
           </div>
         </div>
-        <div class="col span-1-of-4 box">
+        <div class="col span-1-of-4 box js--wp-3">
           <img src="resourses/img/london.jpg" alt="" class="city-img" />
           <h3>London</h3>
           <div class="city-feature">
-            <ion-icon name="person"></ion-icon>1200+ happy eaters
+            <i class="fas fa-user icon-small"></i>1200+ happy eaters
           </div>
           <div class="city-feature">
-            <ion-icon name="star"></ion-icon>50+ top chefs
+            <i class="fas fa-star icon-small"></i>50+ top chefs
           </div>
           <div class="city-feature">
-            <ion-icon name="logo-twitter"></ion-icon>
+            <i class="fab fa-twitter icon-small"></i>
             <a href="#">@omnifood_london</a>
           </div>
         </div>
