--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
     <link rel="stylesheet" href="resourses/css/style.css" />
     <link rel="stylesheet" href="resourses/css/queries.css" />
     <link
-      href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css"
-      rel="stylesheet"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="resourses/favicons/apple-touch-icon.png"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="resourses/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="resourses/favicons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="resourses/favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="resourses/favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="resourses/favicons/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#603cba" />
+    <meta
+      name="msapplication-config"
+      content="resourses/favicons/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
@@ -52,7 +78,6 @@
           </ul>
           <a class="mobile-nav-icon js--nav-icon">
             <i class="fas fa-bars"></i>
-            <!-- <i class="fas fa-times"></i> -->
           </a>
         </div>
       </nav>
@@ -537,7 +562,7 @@
       </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
