--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Omnifood is a premium food delivery service with the mission to bring affordable and healthy meals to as many as people as possible."
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="vendors/css/normalize.css" />
     <link rel="stylesheet" href="vendors/css/grid.css" />
@@ -455,7 +459,7 @@
     <section class="section-form">
       <div class="row"><h2>We're happy to hear from you</h2></div>
       <div class="row">
-        <form action="" class="contact-form">
+        <form action="get" class="contact-form">
           <div class="row">
             <div class="col span-1-of-3">
               <label for="name">Name</label>
@@ -472,7 +476,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">E-mail</label>
+              <label for="email">E-mail</label>
             </div>
             <div class="col span-2-of-3">
               <input
@@ -486,7 +490,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">How did you find us?</label>
+              <label for="find-us">How did you find us?</label>
             </div>
             <div class="col span-2-of-3">
               <select name="find-us" id="find-us">
@@ -499,7 +503,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">Newsletter</label>
+              <label for="news">Newsletter</label>
             </div>
             <div class="col span-2-of-3">
               <input type="checkbox" name="news" id="news" checked />Yes Please
@@ -507,13 +511,13 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">Drop us a line</label>
+              <label for="message">Drop us a line</label>
             </div>
             <div class="col span-2-of-3">
               <textarea
                 name="message"
                 placeholder="Your message here"
-                id=""
+                id="message"
                 cols="30"
                 rows="10"
               ></textarea>
@@ -521,7 +525,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">&nbsp;</label>
+              <label for="submit">&nbsp;</label>
             </div>
             <div class="col span-2-of-3">
               <input type="submit" name="submit" id="submit" value="Send!" />
