--- a/index.html
+++ b/index.html
@@ -456,84 +456,88 @@
         </div>
       </div>
     </section>
-    <section class="section-form">
-      <div class="row"><h2>We're happy to hear from you</h2></div>
-      <div class="row">
-        <form action="get" class="contact-form">
-          <div class="row">
-            <div class="col span-1-of-3">
-              <label for="name">Name</label>
+    <div class="map-box">
+      <div class="map"></div>
+      <div class="form-box">
+        <div class="row"><h2>We're happy to hear from you</h2></div>
+        <div class="row">
+          <form action="get" class="contact-form">
+            <div class="row">
+              <div class="col span-1-of-3">
+                <label for="name">Name</label>
+              </div>
+              <div class="col span-2-of-3">
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  placeholder="Your Name Here"
+                  required
+                />
+              </div>
             </div>
-            <div class="col span-2-of-3">
-              <input
-                type="text"
-                name="name"
-                id="name"
-                placeholder="Your Name Here"
-                required
-              />
+            <div class="row">
+              <div class="col span-1-of-3">
+                <label for="email">E-mail</label>
+              </div>
+              <div class="col span-2-of-3">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="Your E-mail Here"
+                  required
+                />
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col span-1-of-3">
-              <label for="email">E-mail</label>
+            <div class="row">
+              <div class="col span-1-of-3">
+                <label for="find-us">How did you find us?</label>
+              </div>
+              <div class="col span-2-of-3">
+                <select name="find-us" id="find-us">
+                  <option value="friends" selected>Friends</option>
+                  <option value="search">Google</option>
+                  <option value="ad">Advertisement</option>
+                  <option value="other">Other</option>
+                </select>
+              </div>
             </div>
-            <div class="col span-2-of-3">
-              <input
-                type="email"
-                name="email"
-                id="email"
-                placeholder="Your E-mail Here"
-                required
-              />
+            <div class="row">
+              <div class="col span-1-of-3">
+                <label for="news">Newsletter</label>
+              </div>
+              <div class="col span-2-of-3">
+                <input type="checkbox" name="news" id="news" checked />Yes
+                Please
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col span-1-of-3">
-              <label for="find-us">How did you find us?</label>
+            <div class="row">
+              <div class="col span-1-of-3">
+                <label for="message">Drop us a line</label>
+              </div>
+              <div class="col span-2-of-3">
+                <textarea
+                  name="message"
+                  placeholder="Your message here"
+                  id="message"
+                  cols="100"
+                  rows="5"
+                ></textarea>
+              </div>
             </div>
-            <div class="col span-2-of-3">
-              <select name="find-us" id="find-us">
-                <option value="friends" selected>Friends</option>
-                <option value="search">Google</option>
-                <option value="ad">Advertisement</option>
-                <option value="other">Other</option>
-              </select>
+            <div class="row">
+              <div class="col span-1-of-3">
+                <label for="submit">&nbsp;</label>
+              </div>
+              <div class="col span-2-of-3">
+                <input type="submit" name="submit" id="submit" value="Send!" />
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col span-1-of-3">
-              <label for="news">Newsletter</label>
-            </div>
-            <div class="col span-2-of-3">
-              <input type="checkbox" name="news" id="news" checked />Yes Please
-            </div>
-          </div>
-          <div class="row">
-            <div class="col span-1-of-3">
-              <label for="message">Drop us a line</label>
-            </div>
-            <div class="col span-2-of-3">
-              <textarea
-                name="message"
-                placeholder="Your message here"
-                id="message"
-                cols="30"
-                rows="10"
-              ></textarea>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col span-1-of-3">
-              <label for="submit">&nbsp;</label>
-            </div>
-            <div class="col span-2-of-3">
-              <input type="submit" name="submit" id="submit" value="Send!" />
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
-    </section>
+    </div>
     <footer>
       <div class="row">
         <div class="col span-1-of-2">
@@ -550,13 +554,11 @@
           <ul class="social-links">
             <li class="social-icons">
               <a href="#" class="github"
-                ><ion-icon name="logo-github"></ion-icon
+                ><i class="fab fa-github-square"></i
               ></a>
             </li>
             <li class="social-icons">
-              <a href="#" class="linkedin"
-                ><ion-icon name="logo-linkedin"></ion-icon
-              ></a>
+              <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
             </li>
           </ul>
         </div>
@@ -570,6 +572,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="resourses/js/gmaps.min.js"></script>
     <script src="resourses/js/script.js"></script>
   </body>
 </html>
